# Course-project

./: README.md  main.py  pyproject.toml  requirements.txt
classes/: connector.py  engine.py  vacancy.py
data/: all.json
utils/: utils.py
