[tool.poetry]
name = "course project"
version = "0.1.0"
description = ""
authors = ["Qwensty <thefox1999@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^22.2.0"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
coverage = "^7.2.2"
idna = "^3.4"
iniconfig = "^2.0.0"
packaging = "^23.0"
pluggy = "^1.0.0"
pytest = "^7.2.2"
requests = "^2.28.2"
urllib3 = "^1.26.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = 'venv'
show_error_codes = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
warn_redundant_casts = true
